[gd_scene load_steps=5 format=2]

[ext_resource path="res://colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://objects/powerup_dj.gd" type="Script" id=2]
[ext_resource path="res://sounds/shatter.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="powerup_dj" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 1035

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="shatter_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0
[connection signal="body_entered" from="." to="." method="_on_powerup_dj_body_entered"]
[connection signal="finished" from="shatter_sound" to="." method="_on_shatter_sound_finished"]
